--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script type="module" src="/main.js"></script>
 </head>
 <body>
-    <canvas id="c"></canvas>
+    <canvas id="webgl"></canvas>
 </body>
 </html>
